@@ -13,6 +13,8 @@ v1.0 - 2020-12-xx
 		 - the old parameters, "noise_win_length" and "s_win_length", are no more
 		   supported and generate an error
 	- Reorganized config file and improved inline documentation within the file
+	- Plotting improvements:
+		- Show S/N ratio on trace plots
 
 
 v0.9 - 2020-04-24
